--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>React App</title>
+    <link rel="icon" href="./src/Images/Fav-icon.png" />
+    <title>Food Restaurant App</title>
   </head>
   <body>
     <div id="root">Not rendered</div>
