set the MenuStructure format

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="./src/Images/Fav-icon.png" />
-    <title>Food Restaurant App</title>
+    <title>Food Restaurant</title>
   </head>
   <body>
     <div id="root">Not rendered</div>
